--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,49 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    {{!-- <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> --}}
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    <title>Dog Park</title>
-</head>
-<body>
-    <!-- Header -->
-    <header>
-        <h1><i class="fas fa-glass-whiskey"></i> Dog Park</h1>
-        <nav class="navbar navbar-expand-sm navbar-light">
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav m-auto">
-                <a class="nav-item nav-link" href="/">Home</a>
-                {{!-- <a class="nav-item nav-link" href="/browse">Browse</a> --}}
 
-                {{#if loggedIn}}
-                    <a class="nav-item nav-link" href="/inventory">Inventory</a>
-                    <a id="logout" class="nav-item nav-link">Logout</a>
-                {{else}}
-                    <a class="nav-item nav-link" href="/login">Login</a>
-                {{/if}}
-              </div>
+<head>
+<title>Dog Park Tracker</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+<link rel="stylesheet" href="./style.css">   
+</head>
+
+<body> 
+    <header>
+
+        <nav class="navbar navbar-default navbar-fixed-top" role="naviagation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse-main">
+                        <span class="sr-only">Toogle Navigation</span>
+                        <span class="icon-bar"> </span>
+                        <span class="icon-bar"> </span>
+                        <span class="icon-bar"> </span>
+                        <span class="icon-bar"> </span>
+                        
+                    </button>
+                    <h2> <i class="fas fa-dog"></i> Dog Park Tracker</h2>
+                </div>
+                
+                <div>
+                    <div class="collapse navbar-collapse" id="navbar-collapse-main">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="/">Home</a></li>
+                            <li><a href="#">Dashboard </a></li>
+                            <li><a href="#">Profile</a></li>
+                            <li><a href="/login">Login</a></li>
+                            <li><a href="#">logout</a></li>
+                        </ul>
+                    </div>      
+                </div>
             </div>
-          </nav>    
+        </nav>    
     </header>
 
-    <!-- Hero -->
-    <div class="hero">
-        <img src="/images/hero_crop.jpg" class="img-fluid max-width: 100% height: auto" alt="">
-    </div>
+    <div id= "home">
+        <div class="landing-text">
+            <h1>Welcome to the Dog park</h1>
+        </div>
+    </div> 
 
-    <!-- Main -->
-    <main class="p-3">
+    <article>
         {{{ body }}}
+    </article>
+
+    <div class="heading">
+        <h2>About Dogs </h2>
+    </div>
+                
+    
+    <main class="padding">
+        <div class="container"> 
+            <div class="row">
+                <div class="col-sm-6 text-center">
+                    <img src="./images/sad.jpeg  " width="100%">
+                </div>
+                
+                <div class="col-sm-6 text-center"> 
+                    <h2>Akita</h2>
+                    <p class="lead">The Akita is a large and powerful dog breed with a noble and intimidating presence. They were originally used for guarding royalty and nobility in feudal Japan. These dogs also tracked and hunted wild boar, black bear, and sometimes deer.</p>
+                </div>
+            </div>
+        </div>
     </main>
 
-    <!-- Footer -->
+    <div class="padding">
+        <div class="container">
+            <div class ="row">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
+                    <h3>American Bulldog</h3>
+                    <p>The American Bulldog is stocky and muscular, but also agile and built for chasing down stray cattle and helping with farm work. In fact, some are known to jump six feet or more into the air.</p>    
+                </div>
+                
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
+                    <img src="./images/american dog.jpeg" class="img-responsive"  alt="">
+                </div>
+                        
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
+                    <h3>Labsky</h3>
+                    <p>The Labsky is a mixed breed dog — a cross between the Labrador Retriever and Siberian Husky dog breeds. Active, smart, and loyal, these pups inherited some of the best qualities from both of their parents.</p>    
+                </div>
+                        
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
+                    <img src="./images/labsky.jpeg" class="img-responsive"  alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+        
+    <div id="fixed"></div>
+
+    <main class="padding">
+        <div class="container"> 
+            <div class="row">
+                <div class="col-sm-6 "> 
+                    <h2>American English Coonhound</h2>
+                    <p class="lead">TA descendent of the English Foxhound, the American English Coonhoound is a hunting dog breed known for their speed, endurance, and loud voice in the field. The’ll bark and bay at home, too, making them a poor choice if you’ve got nearby neighbors. They need lots of exercise.</p>
+                </div>
+                    
+                <div class="col-sm-6">
+                    <img src="./images/american-english-coonhound.jpeg" width="100%">
+                </div>
+            </div>
+        </div>
+    </main>
+
     <footer class="container-fluid text-center">
         <div class="row">
-                
             <div class="col-xl-6 ">
                 <h3>Connect</h3>
                 <a href="#"  class="fab fa-facebook"> </a> 
@@ -52,13 +126,4 @@
             </div>
         </div>
     </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-{{#if loggedIn}}
-<script src="/javascript/logout.js"></script>
-{{/if}}
-{{!-- <script src="/javascript/script.js"></script> --}}
 </body>
-</html>
