--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,5 @@
+<h2>Top 10 dogparks of the Minneapolis Area</h2>
+<h3>Log in to Vote on a Park or view comments about a park!</h3>
 <ol class="">
     {{#each park as |park|}}
     <li>
