--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 <link rel="stylesheet" href="./style.css">   
+
 </head>
 
 <body> 
@@ -64,7 +65,7 @@
         <div class="container"> 
             <div class="row">
                 <div class="col-sm-6 text-center">
-                    <img src="./images/sad.jpeg  " width="100%">
+                    <img src="/images/sad.jpeg  " width="100%">
                 </div>
                 
                 <div class="col-sm-6 text-center"> 
@@ -84,7 +85,7 @@
                 </div>
                 
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
-                    <img src="./images/american dog.jpeg" class="img-responsive"  alt="">
+                    <img src="/images/american dog.jpeg" class="img-responsive"  alt="">
                 </div>
                         
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
@@ -93,7 +94,7 @@
                 </div>
                         
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" >
-                    <img src="./images/labsky.jpeg" class="img-responsive"  alt="">
+                    <img src="/images/labsky.jpeg" class="img-responsive"  alt="">
                 </div>
             </div>
         </div>
@@ -110,7 +111,7 @@
                 </div>
                     
                 <div class="col-sm-6">
-                    <img src="./images/american-english-coonhound.jpeg" width="100%">
+                    <img src="/images/american-english-coonhound.jpeg" width="100%">
                 </div>
             </div>
         </div>
