single-page now shows with styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-<link rel="stylesheet" href="./style.css">   
+<link rel="stylesheet" href="/style.css">   
+{{!-- <link rel="stylesheet" type="text/css" href="/stylesheets/style.css"> --}}
 
 </head>
 
@@ -36,7 +37,6 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="/">Home</a></li>
                             <li><a href="#">Dashboard </a></li>
-                            <li><a href="#">Profile</a></li>
                             <li><a href="/login">Login</a></li>
                             <li><a href="#">logout</a></li>
                         </ul>
@@ -45,7 +45,7 @@
             </div>
         </nav>    
     </header>
-
+    
     <div id= "home">
         <div class="landing-text">
             <h1>Welcome to the Dog park</h1>
