single dog parks now display, styling still needed

--- a/public/style.css
+++ b/public/style.css
@@ -74,3 +74,21 @@ footer{
     color: blue;
 }
 
+.comment-form {
+    margin-bottom: 5%;
+}
+  
+.comment {
+    padding: 1%;
+    margin-bottom: 1%;
+}
+  
+.comment:nth-child(odd) {
+    background-color: #fff5eb;
+}
+  
+.comment .meta {
+    font-size: 90%;
+    margin-bottom: .5%;
+    opacity: .6;
+}
