--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,10 @@
     <li>
         <article class="park">
             <div class="title">
-                <a href="/park/{{id}}">{{park_name}}</a>
+                <a href="/park/{{id}}">{{park_name}}</a> 
+            </div>
+            <div>
+                Votes = {{vote_count}}
             </div>
         </article>
     </li>
