fixed user-route api for creating a new user

--- a/views/single-park.handlebars
+++ b/views/single-park.handlebars
@@ -1,3 +1,4 @@
+<a href="/"> &larr; Back to main Page</a>
 <div>
     <article class="">
         <div class="">
@@ -28,4 +29,3 @@
 
 <script src="/javascript/comment.js"></script>
 <script src="/javascript/upvote.js"></script>
-<script src="/javascript/addDogPic.js"></script>
